<resources>
    <string name="app_name">SwipeAJob</string>
    <string name="swipeajob_title">SwipeAJob</string>
    <string name="password">Password</string>
    <string name="button_success">Success</string>
    <string name="button_error">Login</string>
    <string name="button_login">Login</string>

    <string name="button_register">Register</string>
    <string name="button_forgot_password">Forgot Password?</string>
    <string name="button_logging_in">Logging you in</string>

    <string name="title_activity_job_swiper">JobSwiperActivity</string>


    <string name="username">Username</string>
    <string name="company_name">Company Name</string>
    <string name="full_name">Full Name</string>
    <string name="education">Education:</string>
    <string name="skills">Skills:</string>
    <string name="experience">Experience:</string>
    <string name="add_education">Add Education</string>
    <string name="add_experience">Add Experience</string>
    <string name="add_skill">Add Skill</string>
    <string name="register">Register</string>
    <string name="registration_appbar_text">Registration</string>
    <string name="forgotten_password_fragment_title">Retrieve Password</string>
    <string name="submit">Submit</string>
    <string name="comapny_name">Company Name</string>
    <string name="start_end_year">start-end year</string>
    <string name="graduation_year">Graduation year</string>
    <string name="school_s_name">School\'s Name</string>
    <string name="skills_name">Skill\'s Name</string>
    <string name="starting_date">Starting Date</string>
    <string name="ending_date">Ending Date</string>
    <string name="graduation_date">Graduation Date</string>
    <string name="add_new_education_item">Add New Education Item</string>
    <string name="ok_text">OK</string>
    <string name="add_new_experience_item">Add New Experience Item</string>
    <string name="add_new_skill_item">Add New Skill Item</string>
    <string name="phoneNumberValidationText">Please Enter a Valid Phone Number</string>
    <string name="username_input_error">Please Enter Your Username!</string>
    <string name="password_input_error">Please Choose a Password!</string>
    <string name="full_name_input_error">Please Enter Your Full Name!</string>
    <string name="company_name_input_error">Please Enter Your Company\'s Name</string>
    <string name="successfull_registeration">User Successfully Registered</string>
    <string name="usernametaken">Username Already Taken! Please Choose an Another One!</string>
    <string name="jobsearcher">Jobsearcher</string>
    <string name="jobprovider">Jobprovider</string>
    <string name="i_am_looking_for_a_password_of_a">I Am Looking For a Password Of A:</string>
    <string name="username_cannot_be_empty">Username Can Not Be Empty</string>
    <string name="password_login_input_error">Please Enter Your Password!</string>
    <string name="incorrect_password_error">Incorrect Password!</string>
    <string name="title_activity_job_swiper_jobprovider">JobSwiperActivity_jobprovider</string>
    <string name="nousername_exception">I didn\'t get a username! :\'(</string>
    <string name="i_want_to_sign_in_as_a">I Want to Sign In As A:</string>
    <string name="log_out">Log Out</string>
    <string name="job_s_name">Job\'s Name:</string>
    <string name="description">Job\'s Description</string>
    <string name="post_new_job">Post New Job</string>
    <string name="new_job_enter_name_error">Please Enter The Job\'s Name</string>
    <string name="jobsearcher_s_image">Jobsearcher\'s Image</string>
    <string name="name">Name</string>
    <string name="modify_user_data">Modify User Data</string>
    <string name="dislike_image_description">Skip Image</string>
    <string name="like_image_description">Like Image</string>
    <string name="dislike_button_description">Dislike Button</string>
    <string name="rewind_button_description">Skip Button</string>
    <string name="like_button_description">Like Button</string>
    <string name="delete_button_description">Delete Button</string>
    <string name="user_image_description">User Image</string>
    <string name="upload_image_button_description">Upload Image Button</string>
    <string name="remove_jobs">Remove Jobs</string>
    <string name="jobsearcher_name_on_cardstackview">Name: %1$s</string>
    <string name="jobsearcher_applied_for_on_cardstackview">Applied For: %1$s</string>
    <string name="jobsearcher_not_found_snackbar">No JobSearcher Is Registered With The Username %1$s</string>
    <string name="jobprovider_not_found_snackbar">No JobProvider Is Registered With The Username %1$s</string>
    <string name="jobs_posted_by_you">Jobs Posted By You</string>
</resources>