<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_registration_text_view"
        android:text="@string/experience"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/addExperienceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_experience"
        android:layout_margin="@dimen/margin_registration_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startEndLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/recycler_view_first_label_margin_start"
        android:layout_marginTop="@dimen/margin_recycler_view_items"
        android:text="@string/start_end_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addExperienceButton"
        android:textSize="@dimen/recycler_view_item_text_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_recycler_view_items"
        android:text="@string/comapny_name"
        app:layout_constraintStart_toEndOf="@+id/startEndLabel"
        app:layout_constraintTop_toBottomOf="@+id/addExperienceButton"
        android:textSize="@dimen/recycler_view_item_text_size"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/experienceRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startEndLabel"
        tools:listitem="@layout/item_experience_list" />

</androidx.constraintlayout.widget.ConstraintLayout>