<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_registration_text_view"
        android:text="@string/education"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addEducationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_registration_button"
        android:text="@string/add_education"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/garduationYearLabel"
        android:layout_width="@dimen/recyclerview_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_recycler_view_items"
        android:textSize="@dimen/recycler_view_item_text_size"
        android:layout_marginStart="@dimen/recycler_view_first_label_margin_start"
        android:text="@string/graduation_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEducationButton" />

    <TextView
        android:layout_width="@dimen/recyclerview_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_recycler_view_items"
        android:layout_marginStart="@dimen/recycler_view_first_label_margin_start"
        android:textSize="@dimen/recycler_view_item_text_size"
        android:text="@string/school_s_name"
        app:layout_constraintStart_toEndOf="@+id/garduationYearLabel"
        app:layout_constraintTop_toBottomOf="@+id/addEducationButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/educationRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/garduationYearLabel"
        tools:listitem="@layout/item_education_list"/>

</androidx.constraintlayout.widget.ConstraintLayout>