<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.JobSwiperActivityFragments.JobSearcher.JobSwiperFragmentJobSearcher">

    <RelativeLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:clipChildren="false"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/rewind_button"
            app:backgroundTint="@android:color/white"
            android:src="@drawable/skip_red_24dp"
            app:fabSize="auto"
            app:rippleColor="#22ED7563"
            android:contentDescription="@string/dislike_button_description"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/rewind_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/app_margin"
            app:backgroundTint="@android:color/white"
            android:src="@drawable/rewind_blue_24dp"
            app:fabSize="mini"
            app:rippleColor="#225BC9FA"
            android:visibility="invisible"
            android:contentDescription="@string/rewind_button_description"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/rewind_button"
            app:backgroundTint="@android:color/white"
            android:src="@drawable/like_green_24dp"
            app:fabSize="auto"
            app:rippleColor="#226FE2B3"
            android:contentDescription="@string/like_button_description"/>

    </RelativeLayout>

    <com.yuyakaido.android.cardstackview.CardStackView
        android:id="@+id/cardStackView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_container"
        android:clipToPadding="false"
        android:padding="4dp"/>

</RelativeLayout>


